--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.react-flow__handle {
+  width: 10px !important;
+  height: 10px !important;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
