--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+.react-flow__nodes .react-flow__node {
+  background-color: #92bbff;
+  border-radius: 8px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.react-flow__pane .react-flow__edge-path {
+  stroke: #4d4dff;
+  stroke-width: 5px;
+}
+
 .react-flow__handle {
   width: 10px !important;
   height: 10px !important;
