--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,26 @@
-.react-flow__nodes .react-flow__node {
-  background-color: #92bbff;
+.reac .react-flow__nodes .react-flow__node {
+  background-color: #d8dbe2;
   border-radius: 8px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .react-flow__pane .react-flow__edge-path {
-  stroke: #4d4dff;
+  stroke: #a9bcd0;
   stroke-width: 5px;
 }
 
-.react-flow__handle {
-  width: 10px !important;
-  height: 10px !important;
+.react-flow__pane .react-flow__node {
+  background-color: #92bbff;
+  padding: 8px;
+  border-radius: 10px;
 }
+
+/* 
+.react-flow__pane .react-flow__handle {
+  width: 10px;
+  height: 10px;
+} */
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -22,7 +29,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1b1b1e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
