--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,33 @@
-.reac .react-flow__nodes .react-flow__node {
-  background-color: #d8dbe2;
-  border-radius: 8px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
 .react-flow__pane .react-flow__edge-path {
-  stroke: #a9bcd0;
+  stroke: #9e9e9e;
   stroke-width: 5px;
 }
 
+.react-flow__nodes .react-flow__node.selected {
+  border: 2px solid #646cff;
+}
+
 .react-flow__pane .react-flow__node {
-  background-color: #92bbff;
-  padding: 8px;
+  background-color: #a5d6a7;
+  border: 2px solid transparent;
+  padding: 30px;
   border-radius: 10px;
 }
 
-/* 
 .react-flow__pane .react-flow__handle {
   width: 10px;
   height: 10px;
-} */
+}
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #1b1b1e;
+  color: #f0f6fc;
+  background-color: #161b22;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
