--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
 .react-flow__pane .react-flow__edge-path {
   stroke: #9e9e9e;
-  stroke-width: 5px;
+  stroke-width: 3px;
+}
+
+.reac-flow-pane .react-flow__edge.selectable:hover .react-flow__edge-path,
+.react-flow__edge.selectable.selected .react-flow__edge-path {
+  stroke: #000;
 }
 
 .react-flow__nodes .react-flow__node.selected {
-  border: 2px solid #646cff;
+  border: 2px solid #8b949e;
 }
 
 .react-flow__pane .react-flow__node {
-  background-color: #a5d6a7;
+  background-color: #2d333b;
   border: 2px solid transparent;
   padding: 30px;
   border-radius: 10px;
@@ -26,8 +31,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #f0f6fc;
-  background-color: #161b22;
+  color: #d4d4d4;
+  background-color: #1e1e1e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
