--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+.tutorial-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #001434;
+  padding: 10px 15px;
+  margin: 15px;
+  border-radius: 8px;
+}
+
+.flow-container {
+  position: relative;
+}
+
 .react-flow__pane .react-flow__edge-path {
   stroke: #9e9e9e;
   stroke-width: 3px;
