--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -22,3 +22,10 @@
 .data-edit-container {
   margin-top: 30px;
 }
+
+.color-chooser {
+  margin-top: 20px;
+}
+.color-chooser .color-input {
+  margin-left: 20px;
+}
